--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,3 +1,5 @@
 @import "normalize.css";
 @import "modules/_large-hero.css";
+@import "base/_vars.css";
 @import "base/_global.css";
+@import "modules/_btn.css";
