--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -14,15 +14,39 @@
     &__title {
         font-weight: 300;
         color: #2f5572;
-        font-size: 4.8rem;
+        font-size: 1.1rem;
         margin: 0;
+
+        @mixin atSmall {
+            font-size: 2rem;
+        }
+
+        @mixin atMedium {
+            font-size: 3.2rem;
+        }
+
+        @mixin atLarge {
+            font-size: 4.8rem,
+        }
     }
     
     &__subtitle {
         font-weight: 300;
         color: #2f5572;
-        font-size: 2.9rem;
+        font-size: 1.1rem;
         margin: 0;
+        
+        @mixin atSmall {
+            font-size: 2rem;
+        }
+
+        @mixin atMedium {
+            font-size: 3.2rem;
+        }
+
+        @mixin atLarge {
+            font-size: 4.8rem,
+        }
     }
 
     &__p {
