--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -1,5 +1,6 @@
 @import "normalize.css";
 @import "modules/_large-hero.css";
 @import "base/_vars.css";
+@import "base/_mixins.css";
 @import "base/_global.css";
 @import "modules/_btn.css";
